# csis4600

./: .gitignore
assignments/Exercise5.8/: CMakeLists.txt  file_perms.c  file_perms.h  main.c  main2.c
assignments/FlexibleRing/: CMakeLists.txt  FlexibleRing.cpp  FlexibleRing.h  main.cpp
assignments/breadthfirst/: CMakeLists.txt  breadthfirst.cpp  file_perms.c
assignments/breadthfirst2/: CMakeLists.txt  main.cpp
assignments/depthfirst/: CMakeLists.txt
assignments/execcmdargv/: CMakeLists.txt  execcmdargv.c  main.c
assignments/keeplog/: .gdb_history  CMakeLists.txt  keeplog  keeplog.c  keeploglib.c
assignments/makeargv/: CMakeLists.txt  argtest.c
assignments/pipeclient/: CMakeLists.txt  pipeclient.c
assignments/pipeserver/: CMakeLists.txt  pipserver.c
assignments/redirect/: CMakeLists.txt  redirect.c
assignments/restart/: restart.h
assignments/ring/: CMakeLists.txt  ring.c
assignments/runback/: CMakeLists.txt  runback.c
assignments/seqclientbad/: CMakeLists.txt  seqclientbad.c
assignments/seqserverbad/: CMakeLists.txt  seqserverbad.c  sqserverbad.c
chapter3/ChainWaitMsg/: CMakeLists.txt  main.c
chapter3/Execls/: CMakeLists.txt  main.c
chapter3/FanWait/: CMakeLists.txt  main.c  restart
chapter3/FanWaitMsg/: CMakeLists.txt  main.c
chapter3/ParentWaitPID/: CMakeLists.txt  main.c
chapter3/SimpleChain/: CMakeLists.txt  main.c
chapter3/SimpleFork/: CMakeLists.txt  (+1 more)
keeplog/: CMakeLists.txt  keeplog.c  keeploglib.c  keeploglib.h  listlib.c  listlib.h
makeargv/: CMakeLists.txt  argtest.c  makeargv.c  makeargv.h
restart/: restart.c
(+8 files in other folders)
